<resources>
    <string name="Rs">\u20B9</string>
    <string name="facebook_app_id">310432503136579</string>
    <string name="fb_login_protocol_scheme">fb310432503136579</string>
    <string name="google_key">AIzaSyA1zryfq-bltErMEYq1qiUeyyjqeXgudqA</string>
    <string name="name_error_msg">Name length minimum 1 characters.</string>
    <string name="error_name_blank">Name should not be blank</string>
    <string name="error_user_name_blank">User name should not be blank</string>
    <string name="error_firm_name_blank">Company name should not be blank</string>
    <string name="error_dob_blank">DOB should not be blank</string>
    <string name="error_anniversary_blank">Anniversary should not be blank</string>
    <string name="only_special_characters_not_allowed">Only special characters are not allowed in name.</string>
    <string name="only_special_characters_not_allowed_user_name">Only special characters are not allowed in user name.</string>
    <string name="only_special_characters_not_allowed_in_firm">Only special characters are not allowed in company name.</string>
    <string name="only_numbers_not_allowed_in_firm">Only numbers are not allowed in company name.</string>
    <string name="only_numbers_not_allowed">Only numbers are not allowed in name.</string>
    <string name="only_numbers_not_allowed_user_name">Only numbers are not allowed in user name.</string>
    <string name="error_email_blank"> Email should not be blank</string>
    <string name="error_address_blank">Address should not be blank</string>
    <string name="error_destination_address_blank">Destination address should not be blank</string>
    <string name="enter_valid_email">Please enter valid Email.</string>
    <string name="error_mobile_number_wrong">Please enter valid mobile number</string>
    <string name="error_ktp_number_wrong">Please enter valid ktp number</string>
    <string name="error_size_wrong">Please enter valid </string>
    <string name="should_be_greater_than_zero">should be greater than Zero </string>
    <string name="error_zip_code_wrong">Please enter valid zipcode</string>
    <string name="error_amount_wrong">Please enter valid amount</string>
    <string name="error_password_pattern">Password should be 6-15 characters long</string>
    <string name="error_password_match">Passowrd is not match</string>
    <string name="upload_failed">Uploading Failed !!!</string>
    <string name="no_internet_connection_available">No Internet Connection Available.</string>
    <string name="error_card_no_blank">Card No should not be blank</string>
    <string name="error_expiry_date">Please enter valid expiry date</string>
    <string name="error_cvv_blank">CVV Should not be blank</string>
    <string name="error_mobile_number_blank"> Mobile number should not be blank</string>
    <string name="error_nick_name_blank">Nickname should not be blank</string>
    <string name="error_password_blank"> Password should not be blank</string>
    <string name="Ok">Ok</string>
    <string name="welcome_afoozo_vip_members">Welcome Afoozo Members</string>
    <string name="new_version_found">New Version Found</string>
    <string name="newer_version_is_available">New version is available. Would you like to update?</string>
    <string name="cancel">Cancel</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_mobile">Continue with Mobile</string>
    <string name="login">Login</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Please_BACK_again_to_exit">Press back again to exit</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="reservation">Reservation</string>
    <string name="events">Events</string>
    <string name="wallet_money">Wallet Money</string>
    <string name="order_history">Order History</string>
    <string name="bill_to_company_orders">Bill To Company Orders</string>
    <string name="prepaid_card">Prepaid Card</string>
    <string name="offers_rewards"><![CDATA[Offers & Rewards]]></string>
    <string name="locations">Locations</string>
    <string name="feedback">Feedback</string>
    <string name="about_app">About App</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="help_and_support">Help and Support</string>
    <string name="Are_you_sure_to_logout">Do you want to logout?</string>
    <string name="Cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="dine_in">Dine In</string>
    <string name="steal_deal">Steal Deal</string>
    <string name="take_away">Take Away</string>
    <string name="delivery">Delivery</string>
    <string name="nearby_on">Nearby On</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="start_time">Start Time:</string>
    <string name="map">Map</string>
    <string name="call">Call</string>
    <string name="address_">Address :</string>
    <string name="email_">Email :</string>
    <string name="phone_">Phone :</string>
    <string name="rbfbab">RBFBAB</string>
    <string name="user_qr">User QR</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="reorder">ReOrder</string>
    <string name="live">Live</string>
    <string name="history">History</string>
    <string name="copy">Copy</string>
    <string name="view_details">View Details</string>
    <string name="offers">Offers</string>
    <string name="you_won">You won</string>
    <string name="valid_till">Valid till :</string>
    <string name="rewards">Rewards</string>
    <string name="notification">Notification</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="anniversary">Anniversary</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Affozo_login_id_requires">Affozo login ID requires OTP verification to \n modify to change this, tap to edit icon</string>
    <string name="enable_editing">Enable Editing</string>
    <string name="save">Save</string>
    <string name="all_location">All Location</string>
    <string name="scan_and_order">Scan and Order</string>
    <string name="please_scan_qr_code_on_your_table">Please Scan QR Code on your table \n to place an Order</string>
    <string name="scan_and_continue">Scan and Continue</string>
    <string name="venue">Venue</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="share">Share</string>
    <string name="reserve">Reserve</string>
    <string name="event_details">Event Details</string>
    <string name="did_not_receive_code">Didn\'t receive code? Resend Now</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_have_sent_you_access_code">We have send you access code \n Via SMS for mobile number verification</string>
    <string name="your_balance">Your Balance</string>
    <string name="tap_to_zoom">Tap To Zoom</string>
    <string name="add_rs_to_your_wallet">Add \u20B9 To Your Wallet</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="pay_securely">Pay Securely</string>
    <string name="add_securely">Add Securely</string>
    <string name="enter_promo_code">Enter promo code</string>
    <string name="have_a_promo_code">Have a Promo Code</string>
    <string name="apply_code">Apply Code</string>
    <string name="or">OR</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="add_rs">Add \u20B9</string>
    <string name="spend_rs">Spend \u20B9</string>
    <string name="history_rs">Wallet History \u20B9</string>
    <string name="coin_rs">Coin History \u20B9</string>
    <string name="store">Store</string>
    <string name="book_now">Book Now</string>
    <string name="consume">Consume</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="menu">Menu</string>
    <string name="add_now">Add Now</string>
    <string name="add">Add</string>
    <string name="view_cart">View Cart</string>
    <string name="change">Change</string>
    <string name="pay_now">Pay Now</string>
    <string name="add_payment_mode">Add Payment Mode</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="add_address">Add Address</string>
    <string name="delivering_food_to">Delivering Food To</string>
    <string name="total">Total</string>
    <string name="reward_coins">Reward Coins</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="gst">GST</string>
    <string name="restaurant_bill">Restaurant Bill</string>
    <string name="billing_information">Billing Information</string>
    <string name="apply_reward_coins">Apply Reward Coins</string>
    <string name="apply_promo_code">Apply Promo Code</string>
    <string name="you_may_also_like">You May Also Like :</string>
    <string name="data_not_found">Dota not found</string>
    <string name="checkout">Checkout</string>
    <string name="prepared">Prepared</string>
    <string name="on_the_way">On the way</string>
    <string name="confirmed">Confirmed</string>
    <string name="order_details">Order Details</string>
    <string name="driver_details">Driver Details</string>
    <string name="camera">Camera</string>
    <string name="media_library">Media Library</string>
    <string name="choose_image_from">Choose Image From</string>
    <string name="other">Other</string>
    <string name="save_your_card_details_securely">Save your card details securely</string>
    <string name="enter_a_nickname_eg">Enter a nickname (e.g. bae\\\'s card)</string>
    <string name="cvv">CVV</string>
    <string name="we_accept_all_credit_and_debit"><![CDATA[We accept Credit and Debit Cards from Visa, Mastercard, American Express, Rupay, Sodexo, Maestro, Diners & Discover.]]></string>
    <string name="name_on_card">Name on card</string>
    <string name="card_number">Card number</string>
    <string name="add_card">Add Card</string>
    <string name="expiry_date_mm_yy">Expiry date (MM/YY)</string>
    <string name="nickname_for_card">Nickname for card</string>
    <string name="business">Business</string>
    <string name="personal">Personal</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="select_address">Select Address</string>
    <string name="pick_my_current_location">Pick my current location</string>
    <string name="want_to_reserve">Want to reserve?</string>
    <string name="item_type">Item Type</string>
    <string name="price">Price</string>
    <string name="item_name_">Item Name</string>
    <string name="accept_terms_and_conditions"><![CDATA[I accept Terms & Conditions as per App & Website]]></string>
    <string name="add_tip">Add Tip</string>
    <string name="skip">Skip</string>
    <string name="rs_50">\u20B950</string>
    <string name="rs_100">\u20B9100</string>
    <string name="rs_200">\u20B9200</string>
    <string name="rs_500_">\u20B9500</string>
</resources>