<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data></data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:gravity="center">

        <LinearLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/retry_alert_bg"
            android:orientation="vertical">

            <in.kpis.afoozo.custome.TextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:textAlignment="center"
                android:background="@color/Grey_300"
                android:text="@string/want_to_reserve"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp_10"
                android:orientation="vertical">

                <in.kpis.afoozo.custome.TextViewRegular
                    style="@style/steal_deal_small_text_view_style"
                    android:text="@string/item_name_" />

                <in.kpis.afoozo.custome.TextViewRegular
                    android:id="@+id/txtPopItemName"
                    style="@style/steal_deal_large_text_view_style" />

                <in.kpis.afoozo.custome.TextViewRegular
                    style="@style/steal_deal_small_text_view_style"
                    android:text="@string/item_type"
                    android:layout_marginTop="@dimen/dp_20"/>

                <in.kpis.afoozo.custome.TextViewRegular
                    android:id="@+id/txtPopType"
                    style="@style/steal_deal_large_text_view_style" />

                <in.kpis.afoozo.custome.TextViewRegular
                    style="@style/steal_deal_small_text_view_style"
                    android:text="@string/price"
                    android:layout_marginTop="@dimen/dp_20"/>

                <in.kpis.afoozo.custome.TextViewRegular
                    android:id="@+id/txtPopPrice"
                    style="@style/steal_deal_large_text_view_style" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/dp_20">

                    <CheckBox
                        android:id="@+id/cbTerms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <in.kpis.afoozo.custome.TextViewRegular
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/accept_terms_and_conditions"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <in.kpis.afoozo.custome.ButtonViewRegular
                    android:id="@+id/btnPopReserve"
                    style="@style/login_signup_button_style"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:text="@string/reserve" />

            </LinearLayout>

    </LinearLayout>
        </LinearLayout>

</layout>
