<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data></data>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.RestaurantAddressActi">

        <include layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <in.kpis.afoozo.custome.TextViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/delivery_address"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/black"/>

            <in.kpis.afoozo.custome.TextViewRegular
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/search_address_bg"
                android:paddingLeft="@dimen/dp_10"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/dp_10"
                android:onClick="searchAddress"
                android:hint="@string/select_address"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/black"/>

            <in.kpis.afoozo.custome.ButtonViewRegular
                android:id="@+id/btnCurrentLocation"
                style="@style/login_signup_button_style"
                android:text="@string/pick_my_current_location"
                android:onClick="getLiveLocation"
                android:layout_margin="@dimen/dp_20"/>

        </LinearLayout>



    </LinearLayout>

</layout>
